# OpenImage

./: .gitignore  .pr_agent.toml  CHANGELOG.md  CLAUDE.md  README.en.md  README.md  requirements.txt
backend/: entry.py  openimage-backend.spec  pyproject.toml
backend/src/: cli.py  server.py
backend/src/api/: deps.py  generate.py  images.py  inpaint.py  llm_chat.py  llm_settings.py  sessions.py  settings.py
backend/src/core/: client.py  config.py  database.py  llm_client.py  llm_prompt.py  llm_tokenizer.py  port.py  session.py  sse.py  storage.py  utils.py
backend/src/core/skills/: prompt_optimizer.md  registry.py
backend/tests/: conftest.py  test_client.py  test_config.py  test_database.py  test_inpaint.py  test_llm_chat.py  test_llm_client.py  test_llm_prompt.py  test_llm_tokenizer.py  test_port.py  test_session.py  test_size_mapping.py  test_skills_registry.py  test_storage.py
docs/: review-backend-batch1-api-routes.md  review-backend-batch3-infra.md  review-backend-summary-fix-plan.md  review-batch2-chatpanel-maskeditor.md  review-batch3-stores-services-utils.md
docs/review/26-05-04/: review-backend-batch2-core.md  review-backend-summary-fix-plan.md  review-batch1-core-ui.md  review-summary-fix-plan.md
docs/superpowers/plans/: 2026-04-29-frontend-redesign-migration.md  2026-04-29-openimage-plan.md  2026-04-30-inpainting.md  (+12 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: build.py  bump.mjs  clean.py  compare_ui.py  dev.ps1  dev.sh
(+58 files in other folders)
